Error in module 11 - lecture 106

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-PO9M96Q;Database=Dating;User=sa;Password=123456;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection":
+      "Server=DESKTOP-PO9M96Q;Database=Dating;User=sa;Password=123456;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
@@ -16,6 +17,11 @@
     }
   },
   "JwtAuthentication": {
-      "Key": "super secret key"
-    }
+    "Key": "super secret key"
+  },
+  "CloudinarySettings": {
+    "CloudName": "vinhloc6991@gmail.com",
+    "ApiKey": "193551597764357",
+    "ApiSecret": "QQ012_wZ4lmAhe8iD_g837glNko"
+  }
 }
