--- a/Dating.API.csproj
+++ b/Dating.API.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0"/>
+    <PackageReference Include="CloudinaryDotNet" Version="1.1.1"/>
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2"/>
